--- a/jenkinsfile
+++ b/jenkinsfile
@@ -14,7 +14,8 @@ pipeline {
         }    
         stage('Build frontend') {
             steps {
-                echo 'This satge will build the code.'
+                sh 'javac Hello.java'
+                sh 'java Hello'
             }    
         }
         stage('Deploy') {
